      individual motif site positions and P-values, as well as combined
      sequence P-values

    o New motif_peaks() function: test for significantly overrepresented peaks
      of motif sites in a set of sequences

    o shuffle_sequences(..., method = "markov") now works for any set of
      characters instead of just DNA/RNA

MINOR CHANGES

    o Expanded motif_pvalue() examples section

    o New vignette section for motif_peaks() added to SequenceSearches.Rmd

    o Increased input security for character type parameters throughout

    o Fixed various spelling mistakes throughout, added Language field to
      Description, and added spell check to tests

    o Generally increased test coverage

    o The 'linear' and 'markov' shuffling methods are now much faster

    o Documentation for the 'random' shuffling method has been removed and a
      warning is shown when  used to tell the user that it will be removed in
      the next minor update

    o Various vignette tweaks

CHANGES IN VERSION 1.0.22
-------------------------

BUG FIXES

    o Fixed incorrect RcppExports code introduced in last patch

CHANGES IN VERSION 1.0.21
-------------------------

BUG FIXES

    o Fixed an incorrect citation in motif_pvalue()

CHANGES IN VERSION 1.0.20
-------------------------

BUG FIXES

    o Fixed a bug introduced in previous patches where create_sequences()
      fails with alphabet = "RNA" and missing difreq/trifreq

CHANGES IN VERSION 1.0.19
-------------------------

BUG FIXES

    o Fixed create_sequences(alphabet = "RNA") when providing difreq/trifreq

CHANGES IN VERSION 1.0.18
-------------------------

BUG FIXES

    o Fixed alphabet letters being stripped from difreq and trifreq params in
      create_sequences()

    o Fixed an incorrect call to sample() when using create_sequences() with
      difreq

CHANGES IN VERSION 1.0.17
-------------------------

BUG FIXES

    o Custom motif alphabets are properly sorted in the alphabet slot of motifs
