@@ -13,6 +13,9 @@ NEW FEATURES
     o shuffle_sequences(..., method = "markov") now works for any set of
       characters instead of just DNA/RNA
 
+    o create_sequences() has a new option "freqs" which allows for generating
+      sequence from higher order backgrounds and any sequence alphabet
+
 MINOR CHANGES
 
     o Expanded motif_pvalue() examples section
@@ -26,13 +29,18 @@ MINOR CHANGES
 
     o Generally increased test coverage
 
-    o The 'linear' and 'markov' shuffling methods are now much faster
+    o The "linear" and "markov" shuffling methods are now much faster
 
-    o Documentation for the 'random' shuffling method has been removed and a
+    o Documentation for the "random" shuffling method has been removed and a
       warning is shown when  used to tell the user that it will be removed in
       the next minor update
 
     o Various vignette tweaks
+
+    o create_sequences() for higher order backgrounds is much faster
+
+    o create_sequences() options "monofreqs", "difreqs", and "trifreqs" are
+      deprecated in favour of "freqs"
 
 CHANGES IN VERSION 1.0.22
 -------------------------
